--- a/extra/Unsolved/css/style.css
+++ b/extra/Unsolved/css/style.css
@@ -1,7 +1,11 @@
 html,
 body,
 #map-id {
-  height: 100%;
+  height: 75%;
+  width: 90%;
+  display: block;
+    margin-left: auto;
+    margin-right: auto;
   padding: 0;
-  margin: 0;
+
 }
