--- a/project2_SO/project2/templates/index.html
+++ b/project2_SO/project2/templates/index.html
@@ -24,6 +24,7 @@
    <!-- Our CSS -->
    <link rel="stylesheet" type="text/css" href="../static/css/style.css">
    <link rel="stylesheet" type="text/css" href="../static/css/bystate.css">
+   <link rel="stylesheet" href="../static/css/d3Style.css">
 
     <!-- Leaflet-Choropleth JavaScript -->
   	<script type="text/javascript" src="../static/js/choropleth.js"></script>
