--- a/project2_SO/project2/templates/index.html
+++ b/project2_SO/project2/templates/index.html
@@ -4,15 +4,12 @@
 	<meta charset="UTF-8">
 	<title>Our Sassy Project</title>
 	
-	<!-- Latest compiled and minified CSS & JS -->
+	<!-- Latest compiled and minified Bootstrap -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
 	
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.7.3/d3.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.7.1/d3-tip.min.js"></script>
-
   
    <!-- Leaflet JS & CSS -->
    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.2/dist/leaflet.css" />
@@ -20,10 +17,12 @@
 
    <!-- d3 JavaScript -->
    <script src="https://d3js.org/d3.v5.min.js"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.7.1/d3-tip.min.js"></script>
 
    <!-- Our CSS -->
    <link rel="stylesheet" type="text/css" href="../static/css/style.css">
-   <link rel="stylesheet" type="text/css" href="../static/css/bystate.css">
+   <link rel="stylesheet" type="text/css" href="../static/css/map.css">
+   <link rel="stylesheet" type="text/css" href="../static/css/markercluster.css">
    <link rel="stylesheet" href="../static/css/d3Style.css">
 
     <!-- Leaflet-Choropleth JavaScript -->
