fixed a few more things

--- a/project2_SO/project2/static/css/style.css
+++ b/project2_SO/project2/static/css/style.css
@@ -9,3 +9,15 @@ body,
   padding: 0;
 
 }
+
+.nameplate {
+  color:yellow !important;
+  font-style: italic !important;
+  font-family: cursive !important;
+  font-weight: 500 !important;
+}
+
+.navcolor
+{
+  background-color: rgb(71,197,197);
+}
