--- a/project2_SO/project2/templates/index.html
+++ b/project2_SO/project2/templates/index.html
@@ -40,15 +40,15 @@
 
 </head>
 <body>
-	<nav class="navbar navbar-light bg-light">
-		<a class="navbar-brand" href="#">
+	<nav class="navbar navbar-dark navcolor">
+		<a class="navbar-brand nameplate" href="/">
 		  <img src="../static/img/logo.jpg" width="30" height="30" class="d-inline-block align-top" alt="">
 		  Sassy Stingrays
 		</a>
 	  </nav>
 
 		<div class="row h-50">
-		<div class="col-md-1">
+		<div class="col-xs-6 col-md-1">
 			<div class="panel panel-primary">
 				<div class="panel-heading">
 					<h5 class="panel-title"><strong>Selection 1</strong></h5>
@@ -59,7 +59,7 @@
 				</div>
 			  </div>
 		</div>
-		<div class="col-md-1">
+		<div class="col-xs-6 col-md-1">
 			<div class="panel panel-primary">
 				<div class="panel-heading">
 				  <h5 class="panel-title"><strong>Selection 2</strong></h5>
@@ -70,7 +70,7 @@
 				</div>
 			  </div>
 		</div>
-		<div id="main-graph" class="col-md-10"></div>
+		<div id="main-graph" class="col-xs-12 col-md-10"></div>
 	</div>
 
 
