--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
 </head>
 <body>
 	<nav class="navbar navbar-dark navcolor">
-		<a class="navbar-brand nameplate" href="/">
+		<a class="navbar-brand nameplate" href="/home/">
 		  <img src="../static/img/logo.jpg" width="30" height="30" class="d-inline-block align-top" alt="">
 		  Sassy Stingrays
 		</a>
