--- a/templates/intro.html
+++ b/templates/intro.html
@@ -27,7 +27,7 @@
 
 <body>
     <nav class="navbar navbar-dark navcolor">
-            <a class="navbar-brand nameplate" href="/home/">
+            <a class="navbar-brand nameplate" href="/">
                 <img src="../static/img/logo.jpg" width="30" height="30" class="d-inline-block align-top" alt="">
                 Sassy Stingrays
             </a>
